--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   google_fonts: ^2.3.0
   flutter_map: ^0.14.0
   google_maps_flutter: ^2.0.9
+  latlng: ^0.1.0
+  map: ^1.0.0
 
 dev_dependencies:
   flutter_test:
