--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   map: ^1.0.0
   latlong2: ^0.8.1
   flutter_map_marker_cluster: ^0.4.4
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
